--- a/index.html
+++ b/index.html
@@ -3,61 +3,91 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
+    <title>studio</title>
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="./CSS/style.css" />
   </head>
   <body>
     <header>
       <nav>
         <!-- <a href="/">WebStudio</a> -->
-        <a href="”#”"><span>Web</span> Studio</a>
-        <ul>
-          <li><a href="/portfolio">Студия</a></li>
-          <li><a href="/contact">Портфолио</a></li>
-          <li><a href="/about">Контакты</a></li>
+        <!-- <a href="”#”"><span class="logo">Web</span> Studio</a> -->
+        <a class="logo" href="”#”"
+          >Web <span class="logo-studio">Studio</span></a
+        >
+        <ul class="site-nav list">
+          <li><a href="./index.html" class="link">Студия</a></li>
+          <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+          <li><a href="./contact.html" class="link">Контакты</a></li>
         </ul>
-        <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        <a href="tel:+380961111111">+38 096 111 11 11</a>
+        <a href="mailto:info@devstudio.com" class="header-contacts"
+          >info@devstudio.com</a
+        >
+        <a href="tel:+380961111111" class="header-contacts"
+          >+38 096 111 11 11</a
+        >
       </nav>
     </header>
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button>Заказать услугу</button>
+      <!-- секция заголовка -->
+      <section class="hat">
+        <h1 class="hat-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="button">Заказать услугу</button>
       </section>
-      <section>
-        <ul>
+      <!-- секция преимущества /features/ -->
+      <section class="section">
+        <ul class="list">
+          <!-- внимание к деталям -->
           <li>
-            <img src="./img/icons/icon1.svg" alt="antenna" />
+            <img
+              class="section-features-img"
+              src="./img/icons/icon1.svg"
+              alt="antenna"
+            />
 
-            <h2>Внимание к деталям</h2>
+            <h2 class="features-title">Внимание к деталям</h2>
             <p>
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
-
+          <!-- пунктуальность -->
           <li>
-            <img src="./img/icons/icon2.svg" alt="wach" />
-            <h2>Пунктуальность</h2>
+            <img
+              class="section-features-img"
+              src="./img/icons/icon2.svg"
+              alt="wach"
+            />
+            <h2 class="features-title">Пунктуальность</h2>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
+          <!-- планирование -->
           <li>
             <img
+              class="section-features-img"
               src="./img/icons/icon3.svg"
               alt="diagran on personal computer"
             />
-            <h2>Планирование</h2>
+            <h2 class="features-title">Планирование</h2>
             <p>
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
+          <!-- современные технологии -->
           <li>
-            <img src="./img/icons/icon4.svg" alt="astronaut1" />
-            <h2>Современные технологии</h2>
+            <img
+              class="section-features-img"
+              src="./img/icons/icon4.svg"
+              alt="astronaut1"
+            />
+            <h2 class="features-title">Современные технологии</h2>
             <p>
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
@@ -66,145 +96,167 @@
         </ul>
       </section>
 
-      <!-- секция Чем мы занимаемся  -->
+      <!-- секция Чем мы занимаемся /our-business/  -->
+      <section class="section">
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <figure>
+          <img
+            src="./img/things/desktop-apps.svg"
+            alt="Десктопные приложения"
+          />
+          <figcaption>
+            Десктопные приложения
+          </figcaption>
+        </figure>
+        <figure>
+          <img src="./img/things/mobile-apps.svg" alt="Мобильные приложения" />
+          <figcaption>
+            Мобильные приложения
+          </figcaption>
+        </figure>
+        <figure>
+          <img src="./img/things/design-sol.svg" alt="дизайнерыские решения" />
+          <figcaption>
+            Дизайнерские решения
+          </figcaption>
+        </figure>
+      </section>
 
-      <h2>Чем мы занимаемся</h2>
-      <figure>
-        <img src="./img/things/desktop-apps.svg" alt="Десктопные приложения" />
-        <figcaption>Десктопные приложения</figcaption>
-      </figure>
-      <figure>
-        <img src="./img/things/mobile-apps.svg" alt="Мобильные приложения" />
-        <figcaption>Мобильные приложения</figcaption>
-      </figure>
-      <figure>
-        <img src="./img/things/design-sol.svg" alt="дизайнерыские решения" />
-        <figcaption>Дизайнерские решения</figcaption>
-      </figure>
-      <!-- секция наша команда -->
-      <section>
-        <h2>Наша команда</h2>
-        <!-- секции с членами команды -->
+      <!-- секция наша команда /our team/ -->
+      <section class="section our-team">
+        <h2 class="section-title">Наша команда</h2>
+        <!-- секция Николай Кучеренко -->
+        <ul class="team list">
+          <li>
+            <img src="./img/people/person1.svg" alt="Николай Кучеренко" />
+            <h3 class="team-title">Николай Кучеренко</h3>
+            <p class="team-text">Product Designer</p>
+            <ul class="list">
+              <li>
+                <a href="">
+                  <img
+                    src="./img/community-logo/instagram-logo.svg"
+                    alt="instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./img/community-logo/twitter.svg" alt="twitter" />
+                </a>
+              </li>
 
-        <!-- секция Джон Смит -->
-        <section>
-          <img src="./img/people/john-smith.svg" alt="John Smith" />
-          <h3>John Smith</h3>
-          <p>Product Designer</p>
-          <ul>
-            <li>
-              <a href="">
-                <img
-                  src="./img/community-logo/instagram-logo.svg"
-                  alt="instagram"
-              /></a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./img/community-logo/twitter.svg" alt="twitter" />
-              </a>
-            </li>
+              <li>
+                <a href="">
+                  <img src="./img/community-logo/facebook.svg" alt="facebook" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./img/community-logo/linkedin.svg" alt="linkedin" />
+                </a>
+              </li>
+            </ul>
+          </li>
 
-            <li>
-              <a href="">
-                <img src="./img/community-logo/facebook.svg" alt="facebook" />
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./img/community-logo/linkedin.svg" alt="linkedin" />
-              </a>
-            </li>
-          </ul>
-        </section>
-        <!-- секция Марта Стюарт / специально не ставил как строчные/ -->
-        <section>
-          <img src="./img/people/marta-stewart.svg" alt="Marta Stewart" />
-          <h3>Marta Stewart</h3>
-          <p>Frontend Developer</p>
+          <!-- секция Ольга Иванова  -->
+          <li>
+            <img src="./img/people/person2.svg" alt="Ольга Иванова" />
+            <h3 class="team-title">Ольга Иванова</h3>
+            <p class="team-text">Frontend Developer</p>
 
-          <a href="">
-            <img src="./img/community-logo/instagram-logo.svg" alt="instagram"
-          /></a>
+            <ul class="list">
+              <li>
+                <a href="">
+                  <img
+                    src="./img/community-logo/instagram-logo.svg"
+                    alt="instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./img/community-logo/twitter.svg" alt="twitter" />
+                </a>
+              </li>
 
-          <a href="">
-            <img src="./img/community-logo/twitter.svg" alt="twitter" />
-          </a>
+              <li>
+                <a href="">
+                  <img src="./img/community-logo/facebook.svg" alt="facebook" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./img/community-logo/linkedin.svg" alt="linkedin" />
+                </a>
+              </li>
+            </ul>
+          </li>
+          <!-- секция Андрей Шевченко -->
+          <li>
+            <img src="./img/people/person3.svg" alt="Андрей Шевченко" />
+            <h3 class="team-title">Андрей Шевченко</h3>
+            <p class="team-text">Marketing</p>
+            <ul class="list">
+              <li>
+                <a href="">
+                  <img
+                    src="./img/community-logo/instagram-logo.svg"
+                    alt="instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./img/community-logo/twitter.svg" alt="twitter" />
+                </a>
+              </li>
 
-          <a href="">
-            <img src="./img/community-logo/facebook.svg" alt="facebook" />
-          </a>
+              <li>
+                <a href="">
+                  <img src="./img/community-logo/facebook.svg" alt="facebook" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./img/community-logo/linkedin.svg" alt="linkedin" />
+                </a>
+              </li>
+            </ul>
+          </li>
+          <!-- секция Иван Николаев -->
+          <li>
+            <img src="./img/people/person4.svg" alt="Иван Николаев" />
+            <h3 class="team-title">Иван Николаев</h3>
+            <p class="team-text">UI Designer</p>
+            <ul class="list">
+              <li>
+                <a href="">
+                  <img
+                    src="./img/community-logo/instagram-logo.svg"
+                    alt="instagram"
+                /></a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./img/community-logo/twitter.svg" alt="twitter" />
+                </a>
+              </li>
 
-          <a href="">
-            <img src="./img/community-logo/linkedin.svg" alt="linkedin" />
-          </a>
-        </section>
-        <!-- секция Роберт Якис -->
-        <section>
-          <img src="./img/people/robert-jakis.svg" alt="Robert Jakis" />
-          <h3>Robert Jakis</h3>
-          <p>Marketing</p>
-          <ul>
-            <li>
-              <a href="">
-                <img
-                  src="./img/community-logo/instagram-logo.svg"
-                  alt="instagram"
-              /></a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./img/community-logo/twitter.svg" alt="twitter" />
-              </a>
-            </li>
-
-            <li>
-              <a href="">
-                <img src="./img/community-logo/facebook.svg" alt="facebook" />
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./img/community-logo/linkedin.svg" alt="linkedin" />
-              </a>
-            </li>
-          </ul>
-        </section>
-        <!-- секция Мартин Дое -->
-        <section>
-          <img src="./img/people/martin-doe.svg" alt="Martin Doe" />
-          <h3>Martin Doe</h3>
-          <p>UI Designer</p>
-          <ul>
-            <li>
-              <a href="">
-                <img
-                  src="./img/community-logo/instagram-logo.svg"
-                  alt="instagram"
-              /></a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./img/community-logo/twitter.svg" alt="twitter" />
-              </a>
-            </li>
-
-            <li>
-              <a href="">
-                <img src="./img/community-logo/facebook.svg" alt="facebook" />
-              </a>
-            </li>
-            <li>
-              <a href="">
-                <img src="./img/community-logo/linkedin.svg" alt="linkedin" />
-              </a>
-            </li>
-          </ul>
-        </section>
+              <li>
+                <a href="">
+                  <img src="./img/community-logo/facebook.svg" alt="facebook" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./img/community-logo/linkedin.svg" alt="linkedin" />
+                </a>
+              </li>
+            </ul>
+          </li>
+        </ul>
       </section>
       <!-- секция постоянные клиенты -->
-      <section>
-        <h2>Постоянные клиенты</h2>
+      <section class="section">
+        <h2 class="section-title">Постоянные клиенты</h2>
         <img src="./img/Clients-logo/Ya-co.svg" alt="Ya & Co" />
         <img src="./img/Clients-logo/tagline-here.svg" alt="Tagline Here" />
         <img src="./img/Clients-logo/company.svg" alt="Company" />
@@ -216,24 +268,30 @@
         />
       </section>
     </main>
-    <footer>
+    <footer class="">
       <!-- секция контактов-->
       <section>
         <h2>
-          <a href="/">WebStudio</a>
+          <a class="logo" href="”#”"
+            >Web <span class="logo-studio logo-footer">Studio</span></a
+          >
         </h2>
+
         <address>
           <p>
             г. Киев, пр-т Леси Украинки, 26
           </p>
-          <a href="mailto:info@example.com">info@example.com</a>
-          <a href="tel:+380991111111">+38 099 111 11 11</a>
+          <a class="contacts" href="mailto:info@example.com"
+            >info@example.com</a
+          >
+
+          <a class="contacts" href="tel:+380991111111">+38 099 111 11 11</a>
         </address>
       </section>
 
       <!-- секция соцсетей -->
       <section>
-        <h2>присоединяйтесь</h2>
+        <h2 class="footer-title">присоединяйтесь</h2>
 
         <a href="">
           <img src="./img/community-logo/instagram-logo.svg" alt="instagram"
@@ -250,12 +308,16 @@
       </section>
 
       <!-- секция подписки -->
-      <h2>Подпишитесь на рассылку</h2>
-      <!-- <form>
-        <p><input placeholder="E-mail" name="email" /></p>
-        <p><button formaction="">Подписаться</button></p>
-      </form> -->
-      <p>2020 | Developed by GoIT Students</p>
+      <h2 class="footer-title">Подпишитесь на рассылку</h2>
+      <form>
+        <p class="form-text"><input placeholder="E-mail" name="email" /></p>
+        <p>
+          <button class="button" formaction="3298901@gmail.com">
+            Подписаться
+          </button>
+        </p>
+      </form>
+      <p class="copyright">2020 | Developed by GoIT Students</p>
     </footer>
   </body>
 </html>
